k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bss
  labels:
    name: bss
    environment: production
